test/tests/stages/7_compound_statements/invalid_parse/ternary_blocks.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  return
  const int(1)
  ?
  {
  identifier(a)
  =
  const int(2)
  }
  :
  identifier(a)
  =
  const int(4)
  ;
  }
